--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,13 +6,38 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <TextView
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:orientation="vertical">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Lifetime!"
+            android:textSize="30sp"
+            android:textColor="@color/purple_500"
+            android:padding="10dp"/>
+        <include layout="@layout/countertxt"/>
+        <include layout="@layout/countertxt"/>
+        <include layout="@layout/countertxt"/>
+        <include layout="@layout/countertxt"/>
+        <include layout="@layout/countertxt"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="This Run!"
+            android:textSize="30sp"
+            android:textColor="@color/purple_500"
+            android:padding="10dp"/>
+        <include layout="@layout/countertxt"/>
+        <include layout="@layout/countertxt"/>
+        <include layout="@layout/countertxt"/>
+        <include layout="@layout/countertxt"/>
+        <include layout="@layout/countertxt"/>
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
